--- a/blog/package.json
+++ b/blog/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "date-fns": "^2.22.1",
     "mongodb": "^3.5.9",
+    "mongoose": "^5.13.5",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
