--- a/blog/package.json
+++ b/blog/package.json
@@ -13,5 +13,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^16.4.13",
+    "@types/react": "^17.0.16",
+    "typescript": "^4.3.5"
+  }
 }
